--- a/models/cnn_model/cnn_v1.ipynb
+++ b/models/cnn_model/cnn_v1.ipynb
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,10 +966,10 @@
     "\n",
     "        model.add(LSTM(20))\n",
     "\n",
+    "        model.add(Dense(512, activation='elu'))\n",
+    "        model.add(Dense(256, activation='elu'))\n",
     "        model.add(Dense(128, activation='elu'))\n",
     "        model.add(Dense(128, activation='elu'))\n",
-    "        model.add(Dense(64, activation='elu'))\n",
-    "        model.add(Dense(32, activation='elu'))\n",
     "        \n",
     "    model.add(Dense(output_shape, activation='linear')) # linear regression output layer\n",
     "\n",
@@ -978,25 +978,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Input 0 of layer \"lstm_2\" is incompatible with the layer: expected ndim=3, found ndim=2. Full shape received: (None, 20)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [45], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#model = create_model(input_shape, output_shape[0], \"normal\")\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m model \u001b[39m=\u001b[39m create_model(input_shape, output_shape[\u001b[39m1\u001b[39;49m], \u001b[39m\"\u001b[39;49m\u001b[39mcnn/lstm\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "Cell \u001b[0;32mIn [44], line 103\u001b[0m, in \u001b[0;36mcreate_model\u001b[0;34m(input_shape, output_shape, option)\u001b[0m\n\u001b[1;32m    100\u001b[0m model\u001b[39m.\u001b[39madd(TimeDistributed(Flatten()))\n\u001b[1;32m    102\u001b[0m model\u001b[39m.\u001b[39madd(LSTM(\u001b[39m20\u001b[39m))\n\u001b[0;32m--> 103\u001b[0m model\u001b[39m.\u001b[39;49madd(LSTM(\u001b[39m20\u001b[39;49m))\n\u001b[1;32m    105\u001b[0m model\u001b[39m.\u001b[39madd(Dense(\u001b[39m128\u001b[39m, activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39melu\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m    106\u001b[0m model\u001b[39m.\u001b[39madd(Dense(\u001b[39m128\u001b[39m, activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39melu\u001b[39m\u001b[39m'\u001b[39m))\n",
-      "File \u001b[0;32m~/miniconda3/envs/tf-gpu/lib/python3.10/site-packages/tensorflow/python/trackable/base.py:205\u001b[0m, in \u001b[0;36mno_automatic_dependency_tracking.<locals>._method_wrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_self_setattr_tracking \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m  \u001b[39m# pylint: disable=protected-access\u001b[39;00m\n\u001b[1;32m    204\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 205\u001b[0m   result \u001b[39m=\u001b[39m method(\u001b[39mself\u001b[39;49m, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    206\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m    207\u001b[0m   \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_self_setattr_tracking \u001b[39m=\u001b[39m previous_value  \u001b[39m# pylint: disable=protected-access\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/tf-gpu/lib/python3.10/site-packages/keras/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[0;32m~/miniconda3/envs/tf-gpu/lib/python3.10/site-packages/keras/engine/input_spec.py:232\u001b[0m, in \u001b[0;36massert_input_compatibility\u001b[0;34m(input_spec, inputs, layer_name)\u001b[0m\n\u001b[1;32m    230\u001b[0m     ndim \u001b[39m=\u001b[39m shape\u001b[39m.\u001b[39mrank\n\u001b[1;32m    231\u001b[0m     \u001b[39mif\u001b[39;00m ndim \u001b[39m!=\u001b[39m spec\u001b[39m.\u001b[39mndim:\n\u001b[0;32m--> 232\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    233\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mInput \u001b[39m\u001b[39m{\u001b[39;00minput_index\u001b[39m}\u001b[39;00m\u001b[39m of layer \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mlayer_name\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    234\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mis incompatible with the layer: \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    235\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mexpected ndim=\u001b[39m\u001b[39m{\u001b[39;00mspec\u001b[39m.\u001b[39mndim\u001b[39m}\u001b[39;00m\u001b[39m, found ndim=\u001b[39m\u001b[39m{\u001b[39;00mndim\u001b[39m}\u001b[39;00m\u001b[39m. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    236\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFull shape received: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtuple\u001b[39m(shape)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    237\u001b[0m         )\n\u001b[1;32m    238\u001b[0m \u001b[39mif\u001b[39;00m spec\u001b[39m.\u001b[39mmax_ndim \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    239\u001b[0m     ndim \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mshape\u001b[39m.\u001b[39mrank\n",
-      "\u001b[0;31mValueError\u001b[0m: Input 0 of layer \"lstm_2\" is incompatible with the layer: expected ndim=3, found ndim=2. Full shape received: (None, 20)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#model = create_model(input_shape, output_shape[0], \"normal\")\n",
     "model = create_model(input_shape, output_shape[1], \"cnn/lstm\")"
@@ -1004,53 +988,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " time_distributed (TimeDistr  (None, 5, 112, 112, 32)  1568      \n",
-      " ibuted)                                                         \n",
+      " time_distributed_34 (TimeDi  (None, 5, 112, 112, 16)  784       \n",
+      " stributed)                                                      \n",
       "                                                                 \n",
-      " time_distributed_1 (TimeDis  (None, 5, 28, 28, 32)    0         \n",
-      " tributed)                                                       \n",
+      " time_distributed_35 (TimeDi  (None, 5, 37, 37, 16)    0         \n",
+      " stributed)                                                      \n",
       "                                                                 \n",
-      " time_distributed_2 (TimeDis  (None, 5, 14, 14, 32)    16416     \n",
-      " tributed)                                                       \n",
+      " time_distributed_36 (TimeDi  (None, 5, 19, 19, 32)    8224      \n",
+      " stributed)                                                      \n",
       "                                                                 \n",
-      " time_distributed_3 (TimeDis  (None, 5, 7, 7, 32)      0         \n",
-      " tributed)                                                       \n",
+      " time_distributed_37 (TimeDi  (None, 5, 9, 9, 32)      0         \n",
+      " stributed)                                                      \n",
       "                                                                 \n",
-      " time_distributed_4 (TimeDis  (None, 5, 7, 7, 32)      9248      \n",
-      " tributed)                                                       \n",
+      " time_distributed_38 (TimeDi  (None, 5, 9, 9, 32)      9248      \n",
+      " stributed)                                                      \n",
       "                                                                 \n",
-      " time_distributed_5 (TimeDis  (None, 5, 3, 3, 32)      0         \n",
-      " tributed)                                                       \n",
+      " time_distributed_39 (TimeDi  (None, 5, 4, 4, 32)      0         \n",
+      " stributed)                                                      \n",
       "                                                                 \n",
-      " time_distributed_6 (TimeDis  (None, 5, 32)            0         \n",
-      " tributed)                                                       \n",
+      " time_distributed_40 (TimeDi  (None, 5, 4, 4, 32)      9248      \n",
+      " stributed)                                                      \n",
       "                                                                 \n",
-      " lstm (LSTM)                 (None, 20)                4240      \n",
+      " time_distributed_41 (TimeDi  (None, 5, 2, 2, 32)      0         \n",
+      " stributed)                                                      \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 128)               2688      \n",
+      " time_distributed_42 (TimeDi  (None, 5, 128)           0         \n",
+      " stributed)                                                      \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 128)               16512     \n",
+      " lstm_5 (LSTM)               (None, 20)                11920     \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 64)                8256      \n",
+      " dense_15 (Dense)            (None, 512)               10752     \n",
       "                                                                 \n",
-      " dense_3 (Dense)             (None, 32)                2080      \n",
+      " dense_16 (Dense)            (None, 256)               131328    \n",
       "                                                                 \n",
-      " dense_4 (Dense)             (None, 2)                 66        \n",
+      " dense_17 (Dense)            (None, 128)               32896     \n",
+      "                                                                 \n",
+      " dense_18 (Dense)            (None, 128)               16512     \n",
+      "                                                                 \n",
+      " dense_19 (Dense)            (None, 2)                 258       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 61,074\n",
-      "Trainable params: 61,074\n",
+      "Total params: 231,170\n",
+      "Trainable params: 231,170\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1062,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,60 +1108,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/60\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-11-01 14:03:17.310511: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8100\n",
-      "2022-11-01 14:03:17.740931: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2022-11-01 14:03:17.741900: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2022-11-01 14:03:17.741925: W tensorflow/stream_executor/gpu/asm_compiler.cc:80] Couldn't get ptxas version string: INTERNAL: Couldn't invoke ptxas --version\n",
-      "2022-11-01 14:03:17.743134: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2022-11-01 14:03:17.743193: W tensorflow/stream_executor/gpu/redzone_allocator.cc:314] INTERNAL: Failed to launch ptxas\n",
-      "Relying on driver to perform ptx compilation. \n",
-      "Modify $PATH to customize ptxas location.\n",
-      "This message will be only logged once.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "635/635 [==============================] - ETA: 0s - loss: 1.4031 - mse: 1.4035 - rmse: 1.1847 - mae: 0.8365 - mape: 115.9876\n",
-      "Epoch 1: val_loss improved from inf to 0.64490, saving model to model_weights/20221101-140311_cnn_best_weights.hdf5\n",
-      "635/635 [==============================] - 639s 998ms/step - loss: 1.4031 - mse: 1.4035 - rmse: 1.1847 - mae: 0.8365 - mape: 115.9876 - val_loss: 0.6449 - val_mse: 0.6451 - val_rmse: 0.8032 - val_mae: 0.6642 - val_mape: 101.5965\n",
-      "Epoch 2/60\n",
-      "634/635 [============================>.] - ETA: 0s - loss: 1.4001 - mse: 1.4001 - rmse: 1.1832 - mae: 0.8356 - mape: 111.4506\n",
-      "Epoch 2: val_loss did not improve from 0.64490\n",
-      "635/635 [==============================] - 619s 972ms/step - loss: 1.4003 - mse: 1.4001 - rmse: 1.1833 - mae: 0.8356 - mape: 111.4565 - val_loss: 0.6538 - val_mse: 0.6540 - val_rmse: 0.8087 - val_mae: 0.6669 - val_mape: 99.7891\n",
-      "Epoch 3/60\n",
-      "634/635 [============================>.] - ETA: 0s - loss: 1.3992 - mse: 1.3992 - rmse: 1.1829 - mae: 0.8355 - mape: 110.8534\n",
-      "Epoch 3: val_loss did not improve from 0.64490\n",
-      "635/635 [==============================] - 620s 974ms/step - loss: 1.3992 - mse: 1.3992 - rmse: 1.1829 - mae: 0.8355 - mape: 110.8493 - val_loss: 0.6573 - val_mse: 0.6575 - val_rmse: 0.8109 - val_mae: 0.6681 - val_mape: 99.1397\n",
-      "Epoch 4/60\n",
-      "634/635 [============================>.] - ETA: 0s - loss: 1.3983 - mse: 1.3983 - rmse: 1.1825 - mae: 0.8353 - mape: 110.5036\n",
-      "Epoch 4: val_loss did not improve from 0.64490\n",
-      "635/635 [==============================] - 641s 1s/step - loss: 1.3989 - mse: 1.3985 - rmse: 1.1826 - mae: 0.8354 - mape: 110.5023 - val_loss: 0.6585 - val_mse: 0.6584 - val_rmse: 0.8114 - val_mae: 0.6686 - val_mape: 98.8898\n",
-      "Epoch 5/60\n",
-      "634/635 [============================>.] - ETA: 0s - loss: 1.3985 - mse: 1.3985 - rmse: 1.1826 - mae: 0.8353 - mape: 110.2590\n",
-      "Epoch 5: val_loss did not improve from 0.64490\n",
-      "635/635 [==============================] - 645s 1s/step - loss: 1.3988 - mse: 1.3986 - rmse: 1.1826 - mae: 0.8354 - mape: 110.2574 - val_loss: 0.6619 - val_mse: 0.6620 - val_rmse: 0.8136 - val_mae: 0.6698 - val_mape: 98.5059\n",
-      "Epoch 6/60\n",
-      "634/635 [============================>.] - ETA: 0s - loss: 1.3958 - mse: 1.3958 - rmse: 1.1815 - mae: 0.8346 - mape: 110.0428\n",
-      "Epoch 6: val_loss did not improve from 0.64490\n",
-      "635/635 [==============================] - 634s 996ms/step - loss: 1.3983 - mse: 1.3968 - rmse: 1.1819 - mae: 0.8348 - mape: 110.0402 - val_loss: 0.6603 - val_mse: 0.6604 - val_rmse: 0.8127 - val_mae: 0.6693 - val_mape: 98.6703\n",
-      "Epoch 6: early stopping\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# batch_size = 0 because we already have batch size in tf dataset\n",
     "model_h = fit_model(train_ds, val_ds, epochs=60, steps=np.ceil(train_size / BATCH_SIZE), val_steps=np.ceil(val_size / BATCH_SIZE), callbacks=[tensorboard_callback, checkpoint_callback, es_callback])"
