--- a/models/cnn_model/cnn_v1.ipynb
+++ b/models/cnn_model/cnn_v1.ipynb
@@ -1682,7 +1682,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('tf-metal')",
+   "display_name": "Python 3.10.6 ('tf-gpu')",
    "language": "python",
    "name": "python3"
   },
@@ -1696,11 +1696,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ef23c3c1d50bf802f6bdec2068b9497488c2d926014eb32ba9a2e7e280d3e86f"
+    "hash": "79f576286c1276b480d6696ed40f6607e18214e4a2875a618cb5be817ff26007"
    }
   }
  },
