--- a/models/dummy_model_v1.ipynb
+++ b/models/dummy_model_v1.ipynb
@@ -1000,27 +1000,27 @@
     "residuals = real_values - predictions\n",
     "residuals_std = residuals/residuals.std()\n",
     "\n",
-    "y_real_stage = np.array([i[0] for i in real_values])\n",
-    "residual_stage = np.array([i[0] for i in residuals])\n",
+    "y_real_stage = np.array([i[-1] for i in real_values])\n",
+    "residual_stage = np.array([i[-1] for i in residuals])\n",
     "\n",
-    "y_real_discharge = np.array([i[1] for i in real_values])\n",
-    "residual_discharge = np.array([i[1] for i in residuals])\n",
+    "y_real_discharge = np.array([i[0] for i in real_values])\n",
+    "residual_discharge = np.array([i[0] for i in residuals])\n",
     "\n",
     "\n",
     "figure, ax = plt.subplots(ncols=2, figsize=(20, 8), dpi=80)\n",
     "\n",
-    "ax[0].scatter(y_real_stage, residual_stage / residual_stage.std(), label=\"stage residuals\")\n",
-    "ax[1].scatter(y_real_discharge, residual_discharge / residual_discharge.std(), label=\"discharge residuals\")\n",
-    "ax[0].axhline(y=0.0, color='r', linestyle='-')\n",
+    "ax[1].scatter(y_real_stage, residual_stage / residual_stage.std(), label=\"stage residuals\")\n",
+    "ax[0].scatter(y_real_discharge, residual_discharge / residual_discharge.std(), label=\"discharge residuals\")\n",
     "ax[1].axhline(y=0.0, color='r', linestyle='-')\n",
+    "ax[0].axhline(y=0.0, color='r', linestyle='-')\n",
     "\n",
-    "ax[0].set_title(\"Stage residuals\")\n",
-    "ax[1].set_title(\"Discharge residuals\")\n",
+    "ax[1].set_title(\"Stage residuals\")\n",
+    "ax[0].set_title(\"Discharge residuals\")\n",
     "\n",
-    "ax[0].set_xlabel(\"Fitted values\")\n",
     "ax[1].set_xlabel(\"Fitted values\")\n",
-    "ax[0].set_ylabel(\"Standarized residuals\")\n",
+    "ax[0].set_xlabel(\"Fitted values\")\n",
     "ax[1].set_ylabel(\"Standarized residuals\")\n",
+    "ax[0].set_ylabel(\"Standarized residuals\")\n",
     "\n",
     "plt.legend()\n",
     "plt.show()"
@@ -1079,7 +1079,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('AI')",
+   "display_name": "Python 3.10.6 ('tf-gpu')",
    "language": "python",
    "name": "python3"
   },
@@ -1093,12 +1093,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d3195bcac7665d94292c51415de587dfe31631e0f2da24bab4176ae761a97102"
+    "hash": "79f576286c1276b480d6696ed40f6607e18214e4a2875a618cb5be817ff26007"
    }
   }
  },
