--- a/get_area_from_river.ipynb
+++ b/get_area_from_river.ipynb
@@ -526,9 +526,9 @@
     "    def __getitem__(self, i):\n",
     "        \n",
     "        # read data\n",
-    "        image = cv2.imread(self.images_fps[i])\n",
+    "        image = cv2.imread(self.images_fps[i], cv2.COLOR_BGR2RGB)\n",
     "        image = cv2.resize(image, (320, 320), interpolation = cv2.INTER_AREA)\n",
-    "        image = denoise_image(image)\n",
+    "        #image = denoise_image(image)\n",
     "\n",
     "        mask = cv2.imread(self.masks_fps[i])\n",
     "        mask = cv2.cvtColor(mask, cv2.COLOR_BGR2GRAY)\n",
