Sixty seven commit

--- a/models/MLPRegressor_v1.ipynb
+++ b/models/MLPRegressor_v1.ipynb
@@ -600,7 +600,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(0)\n",
+    "\n",
     "df_train = df[(df.Year >= 2012) & (df.Year <= 2017)]\n",
+    "df_train = df_train.iloc[np.random.permutation(len(df_train))]\n",
+    "\n",
     "df_test = df[(df.Year >= 2018) & (df.Year <= 2019)]"
    ]
   },
@@ -620,23 +624,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(0)\n",
-    "\n",
     "y_train = df_train[[\"Stage\", \"Discharge\"]]\n",
     "X_train = df_train.drop(columns=[\"Stage\", \"Discharge\"])\n",
     "\n",
-    "temp = list(zip(X_train.values, y_train.values))\n",
-    "np.random.shuffle(temp)\n",
-    "X_train, y_train = zip(*temp)\n",
-    "X_train, y_train = np.array(X_train), np.array(y_train)\n",
-    "\n",
     "y_test = df_test[[\"Stage\", \"Discharge\"]]\n",
-    "X_test = df_test.drop(columns=[\"Stage\", \"Discharge\"])\n",
-    "\n",
-    "temp = list(zip(X_test.values, y_test.values))\n",
-    "np.random.shuffle(temp)\n",
-    "X_test, y_test = zip(*temp)\n",
-    "X_test, y_test = np.array(X_test), np.array(y_test)"
+    "X_test = df_test.drop(columns=[\"Stage\", \"Discharge\"])"
    ]
   },
   {
@@ -948,11 +940,11 @@
     "residuals = y_test - y_pred\n",
     "residuals_std = residuals/residuals.std()\n",
     "\n",
-    "y_real_stage = np.array([i[-1] for i in y_test])\n",
-    "residual_stage = np.array([i[-1] for i in residuals])\n",
+    "y_real_stage = np.array([i[0] for i in y_test])\n",
+    "residual_stage = np.array([i[0] for i in residuals])\n",
     "\n",
-    "y_real_discharge = np.array([i[0] for i in y_test])\n",
-    "residual_discharge = np.array([i[0] for i in residuals])\n",
+    "y_real_discharge = np.array([i[-1] for i in y_test])\n",
+    "residual_discharge = np.array([i[-1] for i in residuals])\n",
     "\n",
     "\n",
     "figure, ax = plt.subplots(ncols=2, figsize=(20, 8), dpi=80)\n",
@@ -1029,7 +1021,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "figure, ax = plt.subplots(ncols=2, figsize=(20, 8), dpi=80)\n",
+    "\n",
+    "ax[0].plot(np.arange(len(y_test)), y_test, label=\"Stage real\")\n",
+    "ax[0].plot(np.arange(len(y_test)), y_pred, label=\"Stage pred\")\n",
+    "\n",
+    "ax[0].set_title(\"Stage residuals\")\n",
+    "ax[1].set_title(\"Discharge residuals\")\n",
+    "\n",
+    "ax[1].set_ylabel(\"Values\")\n",
+    "ax[0].set_ylabel(\"Values\")\n",
+    "ax[1].set_xlabel(\"Time\")\n",
+    "ax[0].set_xlabel(\"Time\")\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
