--- a/models/MLPRegressor_v2.ipynb
+++ b/models/MLPRegressor_v2.ipynb
@@ -664,8 +664,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(0)\n",
+    "\n",
     "df_train = df[(df.Year >= 2012) & (df.Year <= 2016)]\n",
+    "df_train = df_train.iloc[np.random.permutation(len(df_train))]\n",
+    "\n",
     "df_val = df[(df.Year >= 2017) & (df.Year <= 2017)]\n",
+    "df_val = df_val.iloc[np.random.permutation(len(df_val))]\n",
+    "\n",
     "df_test = df[(df.Year >= 2018) & (df.Year <= 2019)]"
    ]
   },
@@ -702,27 +708,11 @@
     "y_train = df_train[[\"Stage\"]]\n",
     "X_train = df_train[[\"RiverWidth\", \"Month\"]]\n",
     "\n",
-    "temp = list(zip(X_train.values, y_train.values))\n",
-    "np.random.shuffle(temp)\n",
-    "X_train, y_train = zip(*temp)\n",
-    "X_train, y_train = np.array(X_train), np.array(y_train)\n",
-    "\n",
     "y_val = df_train[[\"Stage\"]]\n",
     "X_val = df_train[[\"RiverWidth\", \"Month\"]]\n",
     "\n",
-    "temp = list(zip(X_val.values, y_val.values))\n",
-    "np.random.shuffle(temp)\n",
-    "X_val, y_val = zip(*temp)\n",
-    "X_val, y_val = np.array(X_val), np.array(y_val)\n",
-    "\n",
-    "\n",
     "y_test = df_test[[\"Stage\"]].values\n",
-    "X_test = df_test[[\"RiverWidth\", \"Month\"]].values\n",
-    "\n",
-    "\"\"\"temp = list(zip(X_test.values, y_test.values))\n",
-    "np.random.shuffle(temp)\n",
-    "X_test, y_test = zip(*temp)\n",
-    "X_test, y_test = np.array(X_test), np.array(y_test)\"\"\""
+    "X_test = df_test[[\"RiverWidth\", \"Month\"]].values"
    ]
   },
   {
