Sixty nine commit

--- a/models/RandomForestRegressor_seg_v3.ipynb
+++ b/models/RandomForestRegressor_seg_v3.ipynb
@@ -563,8 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[df.Stage > 0]\n",
-    "df = df[df.Discharge > 0]"
+    "df = df[(df.Stage > 0) & (df.Discharge > 0)]"
    ]
   },
   {
@@ -595,7 +594,6 @@
     }
    ],
    "source": [
-    "\n",
     "df.isna().sum()"
    ]
   },
@@ -612,8 +610,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(0)\n",
+    "\n",
     "df_train = df[(df.Year >= 2012) & (df.Year <= 2017)]\n",
-    "#df_val = df[(df.Year >= 2017) & (df.Year <= 2017)]\n",
+    "df_train = df_train.iloc[np.random.permutation(len(df_train))]\n",
+    "\n",
     "df_test = df[(df.Year >= 2018) & (df.Year <= 2019)]"
    ]
   },
@@ -645,24 +646,11 @@
     }
    ],
    "source": [
-    "np.random.seed(0)\n",
-    "\n",
-    "y_train = df_train[[\"Stage\"]]\n",
+    "y_train = df_train[\"Stage\"]\n",
     "X_train = df_train[[\"RiverWidth\", \"Month\"]]\n",
     "\n",
-    "temp = list(zip(X_train.values, y_train.values))\n",
-    "np.random.shuffle(temp)\n",
-    "X_train, y_train = zip(*temp)\n",
-    "X_train, y_train = np.array(X_train), np.array(y_train)\n",
-    "\n",
-    "\n",
-    "y_test = df_test[[\"Stage\"]].values\n",
-    "X_test = df_test[[\"RiverWidth\", \"Month\"]].values\n",
-    "\n",
-    "\"\"\"temp = list(zip(X_test.values, y_test.values))\n",
-    "np.random.shuffle(temp)\n",
-    "X_test, y_test = zip(*temp)\n",
-    "X_test, y_test = np.array(X_test), np.array(y_test)\"\"\""
+    "y_test = df_test[\"Stage\"].values\n",
+    "X_test = df_test[[\"RiverWidth\", \"Month\"]].values"
    ]
   },
   {
