Seventy eigth commit

--- a/models/RandomForestRegressor_v1.ipynb
+++ b/models/RandomForestRegressor_v1.ipynb
@@ -1011,7 +1011,8 @@
     "ax[1].set_xlabel(\"Time\")\n",
     "ax[0].set_xlabel(\"Time\")\n",
     "\n",
-    "plt.legend()\n",
+    "ax[0].legend()\n",
+    "ax[1].legend()\n",
     "plt.show()"
    ]
   }
