--- a/models/knn_regression_v1.ipynb
+++ b/models/knn_regression_v1.ipynb
@@ -918,7 +918,8 @@
     "ax[1].set_xlabel(\"Time\")\n",
     "ax[0].set_xlabel(\"Time\")\n",
     "\n",
-    "plt.legend()\n",
+    "ax[0].legend()\n",
+    "ax[1].legend()\n",
     "plt.show()"
    ]
   }
